--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -2,7 +2,8 @@ name: Build and publish to GitHub Pages
 
 on:
   push:
-    branches: [$default-branch]
+    branches:
+      - main
 
 permissions:
   contents: read
