--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,7 @@ jobs:
       - name: Upload page artifacts
         uses: actions/upload-artifact@v1
         with:
+          name: page
           path: ./dist
   
   deploy:
