--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: r-lib/actions/setup-pandoc@v1
+      - uses: r-lib/actions/setup-pandoc@v2
         with:
           pandoc-version: '2.17.0.1'
       - name: Build
@@ -27,7 +27,7 @@ jobs:
       - name: Upload page artifacts
         uses: actions/upload-artifact@v1
         with:
-          name: page
+          name: github-pages
           path: ./dist
   
   deploy:
